Issue #10356 Update Weld integration